# gphotos-321sync

./: .env.example  .gitignore  Architecture.md  GOOGLE_TAKEOUT_JSON_STRUCTURE.md  Google_Photos_API_structures.md  Google_Takeout_Structure.md  Media_Scanning_Architecture.md  Media_Scanning_Architecture_1st_try.md  Performance_Analysis_Sequential_vs_Parallel.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_FIXED.md  Tests_Description.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: dev_ai_atomic_changes.mdc  dev_ai_clarify_before_doing_anything.mdc  dev_ai_corner_case_awareness.mdc  dev_ai_implementation_strategy.mdc  dev_ai_planning_phase.mdc  dev_ai_testing_each_step.mdc  dev_architecture.mdc  dev_logging_strategy.mdc  dev_testing_edge_case_protection.mdc  dev_testing_smoke_tests.mdc  dev_testing_unit_tests.mdc  dev_testing_use_case_tests.mdc  markdown_cleanup.mdc  markdownlint.mdc
config/: defaults.toml
docs_obsolete/: Tests_Description.md
docs_obsolete/media_scanner/: Media_Processing_Logic.md  Media_Scanning_Architecture.md
frontend/: .gitkeep
src/gphotos_321sync/: errors.py  logging_config.py
src/gphotos_sync/: __init__.py  logging_config.py  main.py
tests/: README.md  __init__.py  test_config.py  test_extractor.py  test_extractor_verification.py  test_pipeline.py
tests/common/: test_checksums.py  test_error_handling_patterns.py  test_logging_config.py  test_naming_consistency.py  test_path_utils.py  test_standardized_errors.py  test_type_hints.py
tests/media_scanner/: test_database.py  test_discovery.py  test_errors.py  test_exif_extractor.py  test_fingerprint.py  test_granular_tracking.py  test_metadata_matcher.py  test_migrations.py  test_mime_detector.py  test_parallel_compatibility.py  (+4 more)
tests_e2e/: README.md  example_usage.py  generate_test_data.py  run_scanner_and_analyze.py
(+44 files in other folders)
